--- a/Backend/Sales-service/.env
+++ b/Backend/Sales-service/.env
@@ -1,2 +1,2 @@
 PORT=4003
-DB_CONNECTION_STRING=postgres://postgres:'0000'@localhost:5432/sales_db
+DB_CONNECTION_STRING=postgresql://sales_user:bREiVaLSw3Sv8kT96AzZ4X6uLADwLbBS@dpg-d02gjv6uk2gs73efdq9g-a.frankfurt-postgres.render.com/sales_db_gn3n
