--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,8 +30,8 @@ jobs:
       run: npm install
     #- name: Run Tests
      # run: npm run test
-    - name: npm run linter
-      run: npm tun lint
+    #- name: npm run linter
+     # run: npm tun lint
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
