--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -32,6 +32,6 @@ jobs:
      # run: npm run test
     #- name: npm run linter
      # run: npm tun lint
-    - run: npm ci
+    #- run: npm ci
     - run: npm run build --if-present
     - run: npm test
