--- a/Backend/Customer-Service/package.json
+++ b/Backend/Customer-Service/package.json
@@ -4,16 +4,16 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "node src/index.js", 
+    "dev": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "pg": "^8.14.1"
-  }
+  },
+  "description": ""
 }
