--- a/Backend/LeadsService/package.json
+++ b/Backend/LeadsService/package.json
@@ -11,5 +11,10 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.25.0",
+    "eslint": "^9.25.0",
+    "globals": "^16.0.0"
   }
 }
