--- a/Backend/LeadsService/package.json
+++ b/Backend/LeadsService/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
-  },
+  "test": "jest",
+  "lint": "eslint src/**/*.js"
+  } ,
   "keywords": [],
   "author": "",
   "license": "ISC",
