--- a/Backend/LeadsService/package.json
+++ b/Backend/LeadsService/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "dotenv": "^16.0.0" 
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
