--- a/Backend/GatewayService/package.json
+++ b/Backend/GatewayService/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http-proxy-middleware": "^3.0.5",
     "nodemon": "^3.1.9"
   },
   "devDependencies": {
