--- a/Backend/GatewayService/package.json
+++ b/Backend/GatewayService/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    
+    "test": "echo \"No tests yet\"",
     "lint": "eslint src/*"
   },
   "keywords": [],
