--- a/Backend/Customer-Service/package.json
+++ b/Backend/Customer-Service/package.json
@@ -16,5 +16,10 @@
     "express": "^5.1.0",
     "pg": "^8.14.1"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "eslint": "^8.35.0",
+    "mocha": "^10.2.0"
+  }
 }
