changed the test in the workflow not to start index.js file but to start test (which is not specified yet)

--- a/.github/workflows/customer-service-ci.yml
+++ b/.github/workflows/customer-service-ci.yml
@@ -31,5 +31,5 @@ jobs:
         working-directory: Backend/Customer-Service
 
       - name: Run basic check
-        run: node src/index.js
+        run: npm test
         working-directory: Backend/Customer-Service
