--- a/Backend/LeadsService/package.json
+++ b/Backend/LeadsService/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
   "test": "jest",
-  "lint": "eslint src/**/*.js"
+  "lint": "eslint src/*"
   } ,
   "keywords": [],
   "author": "",
