--- a/Backend/LeadsService/package.json
+++ b/Backend/LeadsService/package.json
@@ -1,18 +1,19 @@
 {
   "name": "leadsservice",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-  "test": "jest",
-  "lint": "eslint src/*"
-  } ,
+    "test": "jest",
+    "lint": "eslint src/*"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
-    "dotenv": "^16.0.0" 
+    "dotenv": "^16.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
