--- a/Backend/LeadsService/package.json
+++ b/Backend/LeadsService/package.json
@@ -12,11 +12,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "express": "^5.1.0"
   },
   "devDependencies": {
-    
     "eslint": "^8.35.0",
     "globals": "^16.0.0"
   }
