--- a/Backend/ServiceA/package.json
+++ b/Backend/ServiceA/package.json
@@ -13,7 +13,8 @@
   "author": "Chen Asulin",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "cors": "^2.8.5",
+    "express": "^4.21.2"
   },
   "devDependencies": {
     "@types/chai": "^4.3.16",
