--- a/Backend/LeadsService/package.json
+++ b/Backend/LeadsService/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "dotenv": "^16.0.0",
-    "express": "^5.1.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "pg": "^8.15.0"
   },
   "devDependencies": {
     "eslint": "^8.35.0",
