--- a/Backend/AuthenticationService/.env
+++ b/Backend/AuthenticationService/.env
@@ -1,5 +1,5 @@
 # authentication-service/.env
 PORT=4001
-postgresql://main_db_rv6u_user:G6d6B0jaLKp02RQCzq4UK5gTWSLbtF05@dpg-cvp70gje5dus73cblfbg-a.frankfurt-postgres.render.com/main_db_rv6u
+POSTGRES_URI=postgresql://main_db_rv6u_user:G6d6B0jaLKp02RQCzq4UK5gTWSLbtF05@dpg-cvp70gje5dus73cblfbg-a.frankfurt-postgres.render.com/main_db_rv6u
 # POSTGRES_URI=postgres://postgres:postgrespw@localhost:5432/auth_db
 JWT_SECRET=supersecret
