--- a/Backend/LeadsService/package.json
+++ b/Backend/LeadsService/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.8.4",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "http-proxy-middleware": "^3.0.5",
     "pg": "^8.15.0"
   },
   "devDependencies": {
