--- a/Backend/Customer-Service/.env.example
+++ b/Backend/Customer-Service/.env.example
@@ -1,2 +1,3 @@
+PORT=4001
 SERVICE_URL=https://your-service-url-here
 DB_CONNECTION_STRING=postgresql://your_db_user:your_password@your_host:your_port/your_db_name
