--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,6 +22,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with: 
+          path: Backend
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
@@ -36,6 +38,7 @@ jobs:
 
     - name: install dependencies
       run: npm install
+      working-directory: backend
 
     - name: Build project (if needed)
       run: npm run build --if-present
