--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,7 +22,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
@@ -43,6 +43,7 @@ jobs:
 
 
     - name: Run Tests
+      run: npm install mocha
       run: npm run test
     - name: npm run linter
       run: npm run lint
