--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -41,9 +41,8 @@ jobs:
     - name: Build project (if needed)
       run: npm run build --if-present
 
-
+    - run: npm install mocha
     - name: Run Tests
-      run: npm install mocha
       run: npm run test
     - name: npm run linter
       run: npm run lint
