--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -43,6 +43,7 @@ jobs:
 
     - run: npm install mocha
     - name: Run Tests
+      working-directory: Backend
       run: npm run test
     - name: npm run linter
       run: npm run lint
