--- a/Backend/LeadsService/package.json
+++ b/Backend/LeadsService/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "mocha tests/*.spec.js",
     "lint": "eslint src/*"
   },
   "keywords": [],
@@ -21,7 +21,11 @@
     "pg": "^8.15.0"
   },
   "devDependencies": {
+    "chai": "^4.5.0",
     "eslint": "^8.35.0",
-    "globals": "^16.0.0"
+    "mocha": "^10.8.2",
+    "nodemon": "^3.1.9",
+    "sequelize-cli": "^6.6.2",
+    "supertest": "^6.3.4"
   }
 }
