--- a/Backend/LeadsService/package.json
+++ b/Backend/LeadsService/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "chai": "^4.5.0",
+    "chai-http": "^5.1.1",
     "eslint": "^8.35.0",
     "mocha": "^10.8.2",
     "nodemon": "^3.1.9",
