--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -43,7 +43,7 @@ jobs:
 
     - run: npm install mocha
     - name: Run Tests
-      working-directory: '**/Backend/Sales-service'
+      working-directory: /home/runner/work/SCE-Playground/Backend/Sales-sevice
       run: npm run test
     - name: npm run linter
       run: npm run lint
