--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -32,8 +32,8 @@ jobs:
     - name: Set environment variable
       run: echo "DB_CONNECTION_STRING=${{ secrets.DB_CONNECTION_STRING }}" >> $GITHUB_ENV
 
-    - name: Set environment variables
-      run: echo "DB_CONNECTION_STRING=postgres://postgres:postgres@localhost:5432/sales_db" >> $GITHUB_ENV
+    #- name: Set environment variables
+     # run: echo "DB_CONNECTION_STRING=postgres://postgres:postgres@localhost:5432/sales_db" >> $GITHUB_ENV
 
     - name: install dependencies
       run: npm install
