--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,8 +6,13 @@ name: Sales_Workflow
 on:
   push:
     branches: [ "main" ]
+    path:
+     - 'Backend/Sales-service'
   pull_request:
     branches: [ "main" ]
+    path:
+     - 'Backend/Sales-service'
+
     
 
 jobs:
