--- a/Backend/Sales-service/package.json
+++ b/Backend/Sales-service/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "pg": "^8.14.1"
+    "pg": "^8.14.1",
+    "esm": "^3.2.25"
   },
   "devDependencies": {
     "@types/chai": "^5.2.1",
