--- a/Backend/Sales-service/package.json
+++ b/Backend/Sales-service/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sales-service",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
