--- a/Backend/Sales-service/package.json
+++ b/Backend/Sales-service/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "node src/index.js",
-    "test": "mocha --require esm tests/**/*.spec.js"
+    "test": "npx mocha tests/**/*.spec.js"
   },
   "keywords": [],
   "author": "",
