--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,8 +19,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
-    
+    env:
+      DB_CONNECTION_STRING: ${{ secrets.DB_CONNECTION_STRING }}
     strategy:
       matrix:
         node-version: [18.x, 20.x, 22.x]
