--- a/Backend/Sales-service/package.json
+++ b/Backend/Sales-service/package.json
@@ -21,6 +21,7 @@
     "@types/chai": "^5.2.1",
     "@types/mocha": "^10.0.10",
     "chai": "^4.3.10",
+    "eslint": "^9.25.1",
     "mocha": "^11.1.0",
     "nodemon": "^3.1.9"
   }
