--- a/Backend/Sales-service/package.json
+++ b/Backend/Sales-service/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "node src/index.js",
-    "test": "npx mocha tests/**/*.spec.js"
+    "test": "npx mocha tests/**/*.spec.js",
+    "lint": "eslint --ext .js src/ tests/" 
   },
   "keywords": [],
   "author": "",
@@ -21,7 +22,6 @@
     "@types/chai": "^5.2.1",
     "@types/mocha": "^10.0.10",
     "chai": "^4.3.10",
-    "eslint": "^9.25.1",
     "mocha": "^11.1.0",
     "nodemon": "^3.1.9"
   }
