--- a/Backend/Sales-service/package.json
+++ b/Backend/Sales-service/package.json
@@ -23,6 +23,8 @@
     "@types/mocha": "^10.0.10",
     "chai": "^4.3.10",
     "mocha": "^11.1.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "eslint": "^8.57.0"
+
   }
 }
