--- a/Backend/LeadsService/package.json
+++ b/Backend/LeadsService/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "start": "node src/index.js",
     "test": "mocha tests/*.spec.js",
     "lint": "eslint src/*"
   },
