--- a/.github/workflows/leads-ci.yml
+++ b/.github/workflows/leads-ci.yml
@@ -46,11 +46,11 @@ jobs:
     - name: Run linter
       working-directory: Backend/LeadsService
       run: npm run lint
-  # deploy-server:
-  #     needs: build-and-test
-  #     runs-on: ubuntu-latest
-  #     steps:
-  #       - name: activate deploy hook
-  #         run: |
+  deploy-server:
+      needs: build-and-test
+      runs-on: ubuntu-latest
+      steps:
+        - name: activate deploy hook
+          run: curl -X POST "https://api.render.com/deploy/srv-d05369je5dus738s2hk0?key=l84BcZh22zQ"
             
     
