--- a/Backend/GatewayService/.env
+++ b/Backend/GatewayService/.env
@@ -1,3 +1,5 @@
 PORT=4000
-AUTH_SERVICE_URL=http://localhost:4000
-LEADS_SERVICE_URL=http://localhost:4001
+AUTH_SERVICE_URL=http://localhost:4001
+LEADS_SERVICE_URL=https://sce-playground-leads-server.onrender.com
+
+# LEADS_SERVICE_URL=http://localhost:4001
