--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "echo \"No tests yet\""
+    "test": "jest"
   },
   "jest": {
     "testEnvironment": "jsdom",
