--- a/Backend/LeadsService/.env.example
+++ b/Backend/LeadsService/.env.example
@@ -2,7 +2,8 @@
 PORT=4001
 
 # URL to the leads microservice (could be local or deployed)
-LEADS_SERVICE_URL=http://localhost:4001
+LEADS_SERVICE_URL=https://sce-playground-leads-server.onrender.com
+#LEADS_SERVICE_URL=http://localhost:4001
 
 # Connection string to your PostgreSQL database (replace with your real one in .env)
 DB_CONNECTION_STRING=postgresql://leadsuser:4fXzPHnmfMLJuTIGQRGrtm4FGjd6WdOu@dpg-d03istqdbo4c738e7ggg-a.oregon-postgres.render.com/leadsdb_desk
