--- a/Backend/GatewayService/.env
+++ b/Backend/GatewayService/.env
@@ -1,4 +1,4 @@
 # gateway-service/.env
 PORT=4000
 AUTH_SERVICE_URL=http://localhost:4001
-SALES_SERVICE_URL=http://localhost:4003
+SALES_SERVICE_URL=https://sce-playground-sales.onrender.com
