--- a/.github/workflows/products-ci.yml
+++ b/.github/workflows/products-ci.yml
@@ -1,15 +1,15 @@
-# Product-Service/.github/workflows/ci.yml
-name: CI - Product Service
+# GatewayService/.github/workflows/ci.yml
+name: CI - Pruduct Service
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
     paths:
-      - 'Backend/Product-Service/**'
+      - "Backend/Pruduct-Service/**"
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
     paths:
-      - 'Backend/Product-Service/**'
+      - "Backend/Pruduct-Service/**"
 
 jobs:
   build-and-test:
@@ -26,22 +26,22 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd Backend/Product-Service
+          cd Backend/Pruduct-Service
           npm install
 
       - name: Run Linter
         run: |
-          cd Backend/Product-Service
+          cd Backend/Pruduct-Service
           npm run lint
 
       - name: Run Tests
         run: |
-          cd Backend/Product-Service
+          cd Backend/Pruduct-Service
           npm test
-          
+
   deploy-to-render:
     runs-on: ubuntu-latest
 
     steps:
       - name: Deploy to Render
-        run: curl https://api.render.com/deploy/srv-cvv7b9je5dus73ebhrfg?key=He4usrbywVo
+    run: curl https://api.render.com/deploy/srv-cvk62cq4d50c73dk2i10?key=r6gQtstyo5w
