--- a/Backend/AuthenticationService/.env
+++ b/Backend/AuthenticationService/.env
@@ -1,5 +1,6 @@
 # authentication-service/.env
 PORT=4001
-POSTGRES_URI=postgresql://main_x8ww_user:D851uaGvArGNY6bfqW7M8l3OfqCQXKN8@dpg-cviiqo8gjchc73cu9j70-a.frankfurt-postgres.render.com/main_x8ww
+POSTGRES_URI=postgresql://users_0jdf_user:bpVKXQKy0evJ1qleLiduL1AcATSo7CiI@dpg-d054jcmuk2gs73e8tg10-a.frankfurt-postgres.render.com/users_0jdf
+# POSTGRES_URI=postgresql://dbusers_mdfa_user:CXI3y1XT7XBKZK30nbDqJ2KuOaqAooYe@dpg-d05405vgi27c73ca3g40-a.oregon-postgres.render.com/dbusers_mdfa
 # POSTGRES_URI=postgres://postgres:postgrespw@localhost:5432/auth_db
 JWT_SECRET=supersecret
