--- a/.github/workflows/products-ci.yml
+++ b/.github/workflows/products-ci.yml
@@ -1,15 +1,14 @@
-# GatewayService/.github/workflows/ci.yml
-name: CI - Pruduct Service
+name: CI - Product Service
 
 on:
   push:
     branches: ["main"]
     paths:
-      - "Backend/Pruduct-Service/**"
+      - "Backend/Product-Service/**"
   pull_request:
     branches: ["main"]
     paths:
-      - "Backend/Pruduct-Service/**"
+      - "Backend/Product-Service/**"
 
 jobs:
   build-and-test:
@@ -26,22 +25,22 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd Backend/Pruduct-Service
+          cd Backend/Product-Service
           npm install
 
       - name: Run Linter
         run: |
-          cd Backend/Pruduct-Service
+          cd Backend/Product-Service
           npm run lint
 
       - name: Run Tests
         run: |
-          cd Backend/Pruduct-Service
+          cd Backend/Product-Service
           npm test
 
   deploy-to-render:
     runs-on: ubuntu-latest
-
+    needs: build-and-test
     steps:
       - name: Deploy to Render
-    run: curl https://api.render.com/deploy/srv-cvk62cq4d50c73dk2i10?key=r6gQtstyo5w
+        run: curl https://api.render.com/deploy/srv-cvk62cq4d50c73dk2i10?key=r6gQtstyo5w
