--- a/Backend/GatewayService/package.json
+++ b/Backend/GatewayService/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "dev": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 nodemon src/index.js",
     "test": "mocha tests/*.spec.js",
     "lint": "eslint src/*"
   },
@@ -23,6 +23,7 @@
   "devDependencies": {
     "chai": "^4.3.7",
     "eslint": "^8.35.0",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "cross-env": "^7.0.3"
   }
 }
