--- a/Backend/GatewayService/.env
+++ b/Backend/GatewayService/.env
@@ -1,4 +1,6 @@
 # gateway-service/.env
 PORT=4000
 AUTH_SERVICE_URL=http://localhost:4001
-PRODUCTS_SERVICE_URL=https://sce-playground-e9ie.onrender.com
+
+# PRODUCTS_SERVICE_URL=https://sce-playground-e9ie.onrender.com
+PRODUCTS_SERVICE_URL=http://localhost:4005
