--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "bootstrap": "^5.3.6",
     "jest-environment-jsdom": "^29.7.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
