--- a/Backend/AuthenticationService/.env
+++ b/Backend/AuthenticationService/.env
@@ -1,4 +1,7 @@
-# authentication-service/.env
-const PORT = process.env.PORT || 4001; 
-POSTGRES_URI=postgresql://group_6_hvit_user:lu7TOXcU4JlxHeIGUaH3KNMZxnV6tzfm@dpg-d033183uibrs73bch5e0-a.frankfurt-postgres.render.com/group_6_hvit
-DB_CONNECTION_STRING=postgresql://group_6_hvit_user:lu7TOXcU4JlxHeIGUaH3KNMZxnV6tzfm@dpg-d033183uibrs73bch5e0-a.frankfurt-postgres.render.com/group_6_hvit
+PORT=4001
+
+# Connections
+POSTGRES_URI_REMOTE=postgresql://main_db_rv6u_user:...render.com/main_db_rv6u
+POSTGRES_URI_LOCAL=postgres://postgres:postgrespw@localhost:5432/auth_db
+
+JWT_SECRET=supersecret
