--- a/Backend/Customer-Service/.env
+++ b/Backend/Customer-Service/.env
@@ -1,3 +1,3 @@
-const PORT = process.env.PORT || 4001;
-SERVICE_URL=https://sce-playground-y67y.onrender.com
-DB_CONNECTION_STRING=postgresql://group_6_hvit_user:lu7TOXcU4JlxHeIGUaH3KNMZxnV6tzfm@dpg-d033183uibrs73bch5e0-a.frankfurt-postgres.render.com/group_6_hvit
+PORT=4001
+SERVICE_URL=https://sce-playground-v67y.onrender.com
+DB_CONNECTION_STRING=postgresql://group_6_hvit_user:lu7TOXCU4J1xHeIGuH3KWMZXnV6tzfm@dpg-d033183uib...render.com/group_6_hvit
