--- a/Backend/Customer-Service/package.json
+++ b/Backend/Customer-Service/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "src",
+  "name": "customer-service",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
@@ -12,9 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "pg": "^8.14.1"
+    "pg": "^8.14.1",
+    "sequelize": "^6.37.7"
   },
   "description": "",
   "devDependencies": {
