update gateway env

--- a/Backend/GatewayService/.env
+++ b/Backend/GatewayService/.env
@@ -2,5 +2,5 @@
 PORT=4000
 AUTH_SERVICE_URL=http://localhost:4001
 
-# PRODUCTS_SERVICE_URL=https://sce-playground-e9ie.onrender.com
-PRODUCTS_SERVICE_URL=http://localhost:4005
+PRODUCTS_SERVICE_URL=https://sce-playground-e9ie.onrender.com
+# PRODUCTS_SERVICE_URL=http://localhost:4005
