--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,12 +12,17 @@
   },
   "jest": {
     "testEnvironment": "jsdom",
-    "setupFilesAfterEnv": ["<rootDir>/jest.setup.js"]
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.js"
+    ]
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "chart.js": "^4.4.9",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "jest-environment-jsdom": "^29.7.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1"
   },
@@ -44,4 +49,3 @@
   },
   "proxy": "http://localhost:4000"
 }
-
