--- a/Backend/AuthenticationService/.env
+++ b/Backend/AuthenticationService/.env
@@ -1,5 +1,4 @@
 # authentication-service/.env
-PORT=4001
-POSTGRES_URI=postgresql://main_db_rv6u_user:G6d6B0jaLKp02RQCzq4UK5gTWSLbtF05@dpg-cvp70gje5dus73cblfbg-a.frankfurt-postgres.render.com/main_db_rv6u
-# POSTGRES_URI=postgres://postgres:postgrespw@localhost:5432/auth_db
-JWT_SECRET=supersecret
+const PORT = process.env.PORT || 4001; 
+POSTGRES_URI=postgresql://group_6_hvit_user:lu7TOXcU4JlxHeIGUaH3KNMZxnV6tzfm@dpg-d033183uibrs73bch5e0-a.frankfurt-postgres.render.com/group_6_hvit
+DB_CONNECTION_STRING=postgresql://group_6_hvit_user:lu7TOXcU4JlxHeIGUaH3KNMZxnV6tzfm@dpg-d033183uibrs73bch5e0-a.frankfurt-postgres.render.com/group_6_hvit
