--- a/Backend/Customer-Service/package.json
+++ b/Backend/Customer-Service/package.json
@@ -1,11 +1,13 @@
 {
   "name": "src",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "node src/index.js", 
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
@@ -15,5 +17,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "pg": "^8.14.1"
+  },
+  "devDependencies": {
+    "eslint": "^9.27.0"
   }
 }
