--- a/Backend/GatewayService/package.json
+++ b/Backend/GatewayService/package.json
@@ -18,13 +18,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http-proxy-middleware": "^3.0.5",
     "nodemon": "^3.1.9"
   },
   "devDependencies": {
-    "chai": "^5.2.0",
+    "chai": "^4.3.7",
     "eslint": "^8.35.0",
-    "mocha": "^10.8.2",
-    "sinon": "^20.0.0",
-    "sinon-chai": "^4.0.0"
+    "mocha": "^10.2.0"
   }
 }
