--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,7 +8,12 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "start:gateway": "cd Backend/GatewayService && npm run dev",
+    "start:auth": "cd Backend/AuthenticationService && npm run dev",
+    "start:products": "cd Backend/ProductService && npm run dev",
+    "start:frontend": "cd Frontend && npm run dev",
+    "start:all": "concurrently \"npm run start:gateway\" \"npm run start:auth\" \"npm run start:products\" \"npm run start:frontend\""
   },
   "jest": {
     "testEnvironment": "jsdom",
@@ -47,6 +52,7 @@
     "jest": "^29.7.0",
     "jsdom": "^26.0.0",
     "jsdom-global": "^3.0.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "concurrently": "^8.2.2"
   }
 }
