--- a/Backend/TechSupportService/.env
+++ b/Backend/TechSupportService/.env
@@ -1,3 +1,3 @@
 
 PORT=13250
-DB_CON_STR=mockDBinfo
+DB_CON_STR=postgresql://tech_sup_db_475n_user:7GCOKtRmAEF6VNFxUa8ZC60rTbyApHgL@dpg-d0nkj66mcj7s73e435lg-a.frankfurt-postgres.render.com/tech_sup_db_475n
