new data base and fix

--- a/Backend/Customer-Service/.env
+++ b/Backend/Customer-Service/.env
@@ -1,3 +1,3 @@
 PORT=process.env.PORT || 4002
 SERVICE_URL=https://sce-playground-v67y.onrender.com
-DB_CONNECTION_STRING=postgresql://group_6_hvit_user:lu7TOXCU4J1xHeIGuH3KWMZXnV6tzfmdpg-d033183uibrs73bch5e0-a.frankfurt-postgres.render.com/group_6_hvit
+DB_CONNECTION_STRING=postgresql://group_6_new_vg3l_user:BVgzWmIKEm4cT8Z6suiUYxa4f0ir7MWJ@dpg-d1psnf8dl3ps739664b0-a.frankfurt-postgres.render.com/group_6_new_vg3l
