new data base and fix

--- a/Backend/AuthenticationService/.env
+++ b/Backend/AuthenticationService/.env
@@ -1,5 +1,5 @@
 # authentication-service/.env
 PORT=4001
-POSTGRES_URI=postgresql://users_0jdf_user:bpVKXQKy0evJ1qleLiduL1AcATSo7CiI@dpg-d054jcmuk2gs73e8tg10-a.frankfurt-postgres.render.com/users_0jdf
+POSTGRES_URI=postgresql://group_6_new_user:nYW5saD4y2Joe4x5TMaPNwMdQKFEFlfJ@dpg-d0phttjuibrs73fsddfg-a.frankfurt-postgres.render.com/group_6_new
 # POSTGRES_URI=postgres://postgres:postgrespw@localhost:5432/auth_db
 JWT_SECRET=supersecret
