--- a/Backend/AuthenticationService/.env
+++ b/Backend/AuthenticationService/.env
@@ -1,5 +1,5 @@
 # authentication-service/.env
 PORT=4001
-POSTGRES_URI=postgresql://users_0jdf_user:bpVKXQKy0evJ1qleLiduL1AcATSo7CiI@dpg-d054jcmuk2gs73e8tg10-a.frankfurt-postgres.render.com/users_0jdf
+POSTGRES_URI=postgresql://users_ar2s_user:BUegh9KF5HrFoxx3eVqv1AOOBZUA5bR6@dpg-d0qn6c6mcj7s73e6om20-a.frankfurt-postgres.render.com/users_ar2s
 # POSTGRES_URI=postgres://postgres:postgrespw@localhost:5432/auth_db
 JWT_SECRET=supersecret
