updated connection string 2

--- a/Backend/AuthenticationService/.env
+++ b/Backend/AuthenticationService/.env
@@ -1,5 +1,5 @@
 # authentication-service/.env
 PORT=4001
-POSTGRES_URI=postgresql://users_ar2s_user:BUegh9KF5HrFoxx3eVqv1AOOBZUA5bR6@dpg-d0qn6c6mcj7s73e6om20-a.frankfurt-postgres.render.com/users_ar2s
+POSTGRES_URI=postgresql://users_xfa0_user:OtXnEbJ1zFPEpj2ZxDE35W0oFVImL6eT@dpg-d0rgtafdiees73c1a690-a.frankfurt-postgres.render.com/users_xfa0
 # POSTGRES_URI=postgres://postgres:postgrespw@localhost:5432/auth_db
 JWT_SECRET=supersecret
