--- a/Backend/ProductService/package.json
+++ b/Backend/ProductService/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/EveHackmon/SCE-Playground#readme",
   "dependencies": {
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.0",
     "chai-http": "^5.1.1",
     "dotenv": "^16.0.3",
