--- a/Backend/GatewayService/package.json
+++ b/Backend/GatewayService/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "chai": "^5.2.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.35.0",
     "mocha": "^10.8.2",
     "sinon": "^20.0.0",
