--- a/Backend/AuthenticationService/package.json
+++ b/Backend/AuthenticationService/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test":  "echo \"No tests yet\"",
+    "test": "mocha tests/*.spec.js",
     "lint": "eslint src/*"
   },
   "keywords": [],
