--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,3 +1,3 @@
-# VITE_GATEWAY_URL=http://localhost:4000
-VITE_GATEWAY_URL="https://sce-playground-gateway-service.onrender.com"
+VITE_GATEWAY_URL=http://localhost:4000
+#VITE_GATEWAY_URL="https://sce-playground-gateway-service.onrender.com"
 
