updated the code

--- a/.github/workflows/auth-ci.yml
+++ b/.github/workflows/auth-ci.yml
@@ -3,13 +3,13 @@ name: CI - Auth Service
 
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]
     paths:
-      - "Backend/AuthenticationService/**"
+      - 'Backend/AuthenticationService/**'
   pull_request:
-    branches: ["main"]
+    branches: [ "main" ]
     paths:
-      - "Backend/AuthenticationService/**"
+      - 'Backend/AuthenticationService/**'
 
 jobs:
   build-and-test:
@@ -38,6 +38,7 @@ jobs:
         run: |
           cd Backend/AuthenticationService
           npm test
+          
 
   deploy-to-render:
     runs-on: ubuntu-latest
