--- a/Backend/GatewayService/package.json
+++ b/Backend/GatewayService/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 nodemon src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "mocha tests/*.spec.js",
     "lint": "eslint src/*"
   },
