--- a/Backend/Sales-service/.eslintrc.json
+++ b/Backend/Sales-service/.eslintrc.json
@@ -10,6 +10,8 @@
     },
     "rules": {
       "no-unused-vars": "warn",
+      "quotes": ["error", "single", { "avoidEscape": true }],
+      "no-var": ["error"],
       "no-console": "off"
     }
   }
