--- a/.github/workflows/sales-ci.yml
+++ b/.github/workflows/sales-ci.yml
@@ -7,11 +7,11 @@ on:
   push:
     branches: [ "main" ]
     paths:
-     - 'Backend/Sales-service'
+     - 'Backend/Sales-service/**'
   pull_request:
     branches: [ "main" ]
     paths:
-     - 'Backend/Sales-service'
+     - 'Backend/Sales-service/**'
 
     
 
