--- a/.github/workflows/sales-ci.yml
+++ b/.github/workflows/sales-ci.yml
@@ -20,10 +20,10 @@ jobs:
 
     runs-on: ubuntu-latest
     env:
-      DB_CONNECTION_STRING: ${{ secrets.DB_CONNECTION_STRING }}
+      POSTGRES_URI: ${{ secrets.POSTGRES_URI }}
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x]
+        node-version: [20.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
