--- a/Backend/Customer-Service/.env
+++ b/Backend/Customer-Service/.env
@@ -1,4 +1,4 @@
 PORT=4002
 SERVICE_URL=https://sce-playground-y67y.onrender.com
-DB_CONNECTION_STRING=postgresql://group_6_new_user:nYW5saD4y2Joe4x5TMaPNwMdQKFEFlfJ@dpg-d0phttjuibrs73fsddfg-a.frankfurt-postgres.render.com/group_6_new
+DB_CONNECTION_STRING=postgresql://group_6_new_vg3l_user:BVgzWmIKEm4cT8Z6suiUYxa4f0ir7MWJ@dpg-d1psnf8dl3ps739664b0-a.frankfurt-postgres.render.com/group_6_new_vg3l
 CLIENT_ORIGIN=https://sce-playground-y67y.onrender.com
