--- a/Backend/AuthenticationService/src/.env
+++ b/Backend/AuthenticationService/src/.env
@@ -1,3 +1,4 @@
+PORT=4002
 POSTGRES_URI=postgresql://group_6_new_user:נYW5saD4y2Joe4x5TMaPNwMdQKFEFlfJ@dpg-d0phttjuibrs73fsddfg-a.frankfurt-postgres.render.com/group_6_new
 # POSTGRES_URI=postgres://postgres:postgrespw@localhost:5432/auth_db
 JWT_SECRET=supersecret
