--- a/Backend/GatewayService/.env.example
+++ b/Backend/GatewayService/.env.example
@@ -1,9 +1,4 @@
 PORT=4000
 AUTH_SERVICE_URL=https://sce-playground-y67y.onrender.com/api
 LEADS_SERVICE_URL=https://sce-playground-leads-server.onrender.com
-
-PORT=4000
-AUTH_SERVICE_URL=http://localhost:4001
-LEADS_SERVICE_URL=https://sce-playground-leads-server.onrender.com
-
-# LEADS_SERVICE_URL=http://localhost:4001
+CUSTOMER_SERVICE_URL=https://sce-playground-y67y.onrender.com
